Comment out email display in allDetails.html
Comment out the email display in user details.

--- a/templates/allDetails.html
+++ b/templates/allDetails.html
@@ -162,7 +162,7 @@
         <img src="data:image/jpeg;base64,{{ u.image }}" alt="User Image">
         <div class="info">
           <p><strong>{{ u.name }}</strong></p>
-          <p>Email: {{ u.email }}</p>
+          <!-- <p>Email: {{ u.email }}</p> -->
           <p>Age: {{ u.age }}</p>
           <p>Gender: {{ u.gender }}</p>
           <p>Address: {{ u.address }}</p>
